feat: add header

--- a/plants/index.html
+++ b/plants/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="sass/style.css">
     <link rel="shortcut icon" href="./assets/icons/favicon.ico" type="image/x-icon">
     <title>Plants</title>
   </head>
@@ -16,8 +14,10 @@
         <div class="wrapper">
           <div class="header__wrapper">
             <div class="logo-line">
-              <a href="#" class="logo-link">Logo</a>
-              <h3 class="logo-text">Plants</h3>
+              <div class="logo-img">
+                <a href="#" class="logo-link"></a>
+              </div>
+              <h4 class="logo-text">Plants</h4>
             </div>
             <nav class="header__nav">
               <ul class="nav-items">
