feat: add styles for welcome and about sections

--- a/plants/index.html
+++ b/plants/index.html
@@ -44,10 +44,10 @@
       <section class="welcome">
         <div class="wrapper">
           <div class="welcome__content">
-            <img src="" alt="leafs" />
+            <div class="welcome__background"></div>
             <div class="welcome__info">
               <h1 class="welcome__info-title">
-                We grow plants and give you oxygen
+                We grow <span class="text-colored">plants</span> and give you oxygen
               </h1>
               <p class="welcome__info-text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -65,7 +65,7 @@
         <div class="about__content">
           <div class="about__info">
             <h2 class="about__info-title">
-              We are professional experienced gardeners
+              We are <span class="heading-colored">professional experienced</span> gardeners
             </h2>
             <p class="about__info-text">
               Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -76,7 +76,7 @@
               electronic typesetting, remaining essentially unchanged.
             </p>
           </div>
-          <img src="#" alt="houseplant" />
+          <div class="about-image"></div>
         </div>
       </div>
     </section>
