--- a/plants/index.html
+++ b/plants/index.html
@@ -21,20 +21,20 @@
             </div>
             <nav class="header__nav">
               <ul class="nav-items">
-                <li class="nav-item">
-                  <a href="#" class="nav-link">Home</a>
+                <li class="nav-item home-item">
+                  <a href="../plants/index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item about-item">
+                  <a href="#about-section" class="nav-link">About us</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#" class="nav-link">About us</a>
+                  <a href="#service-section" class="nav-link">Service</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#" class="nav-link">Service</a>
+                  <a href="#price-section" class="nav-link">Price</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#" class="nav-link">Price</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link">Contacts</a>
+                  <a href="#contacts-section" class="nav-link">Contacts</a>
                 </li>
               </ul>
             </nav>
@@ -50,8 +50,8 @@
                 We grow <span class="text-colored">plants</span> and give you oxygen
               </h1>
               <p class="welcome__info-text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
+                Lorem Ipsum is simply dummy text of the printing and <br>typesetting
+                industry. Lorem Ipsum has been the <br> industry's standard dummy
                 text ever since the 1500s.
               </p>
               <button class="button button_bordered">LEARN MORE</button>
@@ -60,176 +60,189 @@
         </div>
       </section>
     </div>
-    <section class="about">
-      <div class="wrapper">
-        <div class="about__content">
-          <div class="about__info">
-            <h2 class="about__info-title">
-              We are <span class="heading-colored">professional experienced</span> gardeners
-            </h2>
-            <p class="about__info-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged.
-            </p>
-          </div>
-          <div class="about-image"></div>
-        </div>
-      </div>
-    </section>
-    <section class="service">
-      <div class="wrapper">
-        <div class="service__content">
-          <h2 class="service__content-title">Service and our projects</h2>
-          <div class="service__content-buttons">
-            <button class="button button_primary">Gardens</button>
-            <button class="button button_primary">Lawn</button>
-            <button class="button button_primary">Planting</button>
+    <main class="main">
+      <section  id="about-section" class="about">
+        <div class="wrapper">
+          <div class="about__content">
+            <div class="about__info">
+              <h2 class="about__info-title">
+                We are <span class="heading-colored">professional experienced</span> gardeners
+              </h2>
+              <p class="about__info-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy text
+                ever since the 1500s, when an unknown printer took a galley of
+                type and scrambled it to make a type specimen book. It has
+                survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged.
+              </p>
+            </div>
+            <div class="about-image"></div>
           </div>
         </div>
-        <div class="service__table">
-          <div class="layout-3-column">
-            <div class="column__content-block">
-              <img src="../plants/assets/images/garden1.jpg" alt="garden care" class="column__content-image">
-              <div class="column__content-info">
-                <h3 class="column__content-subtitle">Garden care</h3>
-                <span class="column__content-text">Lorem Ipsum has been the industry</span>
-              </div>
-            </div>
-            <div class="column__content-block">
-              <img src="../plants/assets/images/planting1.jpg" alt="Planting" class="column__content-image">
-              <div class="column__content-info">
-                <h3 class="column__content-subtitle">Planting</h3>
-                <span class="column__content-text">Lorem Ipsum has been the industry</span>
-              </div>
-            </div>
-            <div class="column__content-block">
-              <img src="../plants/assets/images/lawn.jpg" alt="Lawn care" class="column__content-image">
-              <div class="column__content-info">
-                <h3 class="column__content-subtitle">Lawn care</h3>
-                <span class="column__content-text">Lorem Ipsum has been the industry</span>
-              </div>
-            </div>
-            <div class="column__content-block">
-              <img src="../plants/assets/images/planting2.jpg" alt="Planting" class="column__content-image">
-              <div class="column__content-info">
-                <h3 class="column__content-subtitle">Planting</h3>
-                <span class="column__content-text">Lorem Ipsum has been the industry</span>
-              </div>
-            </div>
-            <div class="column__content-block">
-              <img src="../plants/assets/images/garden2.jpg" alt="garden care" class="column__content-image">
-              <div class="column__content-info">
-                <h3 class="column__content-subtitle">Garden care</h3>
-                <span class="column__content-text">Lorem Ipsum has been the industry</span>
-              </div>
-            </div>
-            <div class="column__content-block">
-              <img src="../plants/assets/images/planting3.jpg" alt="Planting" class="column__content-image">
-              <div class="column__content-info">
-                <h3 class="column__content-subtitle">Planting</h3>
-                <span class="column__content-text">Lorem Ipsum has been the industry</span>
-              </div>
+      </section>
+      <section id="service-section" class="service">
+        <div class="wrapper">
+          <div class="service__content">
+            <h2 class="service__content-title">Service and our projects</h2>
+            <div class="service__content-buttons">
+              <button class="button button_primary">Gardens</button>
+              <button class="button button_primary">Lawn</button>
+              <button class="button button_primary">Planting</button>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <section class="prices">
-      <div class="wrapper">
-        <div class="prices__wrapper">
-          <div class="prices__rates">
-            <h2 class="prices__title">Prices</h2>
-            <div class="dropdown">
-              <div class="dropdown_wrapper">
-                <div class="dropdown__item">
-                  <div class="dropdown__button">
-                    <details class="">
-                      <summary class="dropdown_info">Basics</summary>
-                    </details>
-                  </div>
-                    <div class="arrow"></div>
+          <div class="service__table">
+            <div class="layout-3-column">
+              <div class="column__content-block content-block-left">
+                <img src="../plants/assets/images/garden1.jpg" alt="garden care" class="column__content-image">
+                <div class="column__content-info">
+                  <h3 class="column__content-subtitle">Garden care</h3>
+                  <span class="column__content-text">Lorem Ipsum has been the industry</span>
                 </div>
               </div>
-              <div class="dropdown_wrapper">
-                <div class="dropdown__item">
-                  <div class="dropdown__button">
-                    <details class="">
-                      <summary class="dropdown_info">Standard</summary>
-                    </details>
-                  </div>
-                    <div class="arrow"></div>
+              <div class="column__content-block">
+                <img src="../plants/assets/images/planting1.jpg" alt="Planting" class="column__content-image">
+                <div class="column__content-info">
+                  <h3 class="column__content-subtitle">Planting</h3>
+                  <span class="column__content-text">Lorem Ipsum has been the industry</span>
                 </div>
               </div>
-              <div class="dropdown_wrapper">
-                <div class="dropdown__item">
-                  <div class="dropdown__button">
-                    <details class="">
-                      <summary class="dropdown_info">Pro care</summary>
-                    </details>
-                  </div>
-                    <div class="arrow"></div>
+              <div class="column__content-block content-block-right">
+                <img src="../plants/assets/images/lawn.jpg" alt="Lawn care" class="column__content-image">
+                <div class="column__content-info">
+                  <h3 class="column__content-subtitle">Lawn care</h3>
+                  <span class="column__content-text">Lorem Ipsum has been the industry</span>
+                </div>
+              </div>
+              <div class="column__content-block content-block-left">
+                <img src="../plants/assets/images/planting2.jpg" alt="Planting" class="column__content-image">
+                <div class="column__content-info">
+                  <h3 class="column__content-subtitle">Planting</h3>
+                  <span class="column__content-text">Lorem Ipsum has been the industry</span>
+                </div>
+              </div>
+              <div class="column__content-block">
+                <img src="../plants/assets/images/garden2.jpg" alt="garden care" class="column__content-image">
+                <div class="column__content-info">
+                  <h3 class="column__content-subtitle">Garden care</h3>
+                  <span class="column__content-text">Lorem Ipsum has been the industry</span>
+                </div>
+              </div>
+              <div class="column__content-block content-block-right">
+                <img src="../plants/assets/images/planting3.jpg" alt="Planting" class="column__content-image">
+                <div class="column__content-info">
+                  <h3 class="column__content-subtitle">Planting</h3>
+                  <span class="column__content-text">Lorem Ipsum has been the industry</span>
                 </div>
               </div>
             </div>
           </div>
-          <div class="prices__contacts">
-            <h3 class="prices__title">
-              Our best <span class="text-colored">gardeners</span> are ready to help you
-            </h3>
-            <div class="prices__contacts-info">
-              <button class="button button_primary button_contacted">Contact us</button>
-              <img src="../plants/assets/images/leafs_prices.jpg" alt="leafs">
+        </div>
+      </section>
+      <section id="price-section" class="prices">
+        <div class="wrapper">
+          <div class="prices__wrapper">
+            <div class="prices__rates">
+              <h2 class="prices__title">Prices</h2>
+              <div class="dropdown">
+                <div class="dropdown_wrapper">
+                  <div class="dropdown__item">
+                    <div class="dropdown__button">
+                      <details class="">
+                        <summary class="dropdown_info">Basics</summary>
+                      </details>
+                    </div>
+                      <div class="arrow"></div>
+                  </div>
+                </div>
+                <div class="dropdown_wrapper">
+                  <div class="dropdown__item">
+                    <div class="dropdown__button">
+                      <details class="">
+                        <summary class="dropdown_info">Standard</summary>
+                      </details>
+                    </div>
+                      <div class="arrow"></div>
+                  </div>
+                </div>
+                <div class="dropdown_wrapper">
+                  <div class="dropdown__item">
+                    <div class="dropdown__button">
+                      <details class="">
+                        <summary class="dropdown_info">Pro care</summary>
+                      </details>
+                    </div>
+                      <div class="arrow"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="prices__contacts">
+              <h3 class="prices__title">
+                Our best <span class="text-colored">gardeners</span> are ready to help you
+              </h3>
+              <div class="prices__contacts-info">
+                <button class="button button_primary button_contacted">Contact us</button>
+                <img src="../plants/assets/images/leafs_prices.jpg" class="prices-image" alt="leafs">
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="contacts">
-      <div class="wrapper">
-        <div class="contacts__wrapper">
-          <img src="#" alt="woman" class="contacts__image" />
-          <select name="City" id="#">
-            <option value="1">Canandaigua, NY</option>
-            <option value="2">New York City</option>
-            <option value="3">Yonkers, NY</option>
-            <option value="4">Sherrill, NY</option>
-          </select>
+      </section>
+      <section id="contacts-section" class="contacts">
+        <div class="wrapper">
+          <div class="contacts__wrapper">
+            <img src="../plants/assets/images/woman.png" alt="woman" class="contacts__image">
+            <h2 class="contacts-title">Contact us</h2>
+            <div class="contacts-content">
+            <div class="select-wrapper">
+              <div class="select-form-button">
+                <select name="City" id="#" class="select-form" disabled>
+                  <option value="1" selected>City</option>
+                  <option value="2">Canandaigua, NY</option>
+                  <option value="3">New York City</option>
+                  <option value="4">Yonkers, NY</option>
+                  <option value="5">Sherrill, NY</option>
+                </select>
+              </div>
+              <div class="arrow-select"></div>
+            </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
     <footer class="footer">
       <div class="wrapper">
         <div class="footer__wrapper">
           <div class="footer__items">
             <div class="footer__item">
-              <span class="footer__student-info footer__copyright">©</span>
-              <span class="footer__student-info footer__year">2022</span>
-              <span class="footer__student-info">
-                <a href="#" class="student-link">github</a>
-              </span>
+              <ul class="students-contacts">
+                <li class="footer__student-info footer__copyright">©</li>
+                <li class="footer__student-info footer__year">2022</li>
+                <li class="footer__student-info">
+                  <a href="https://github.com/tat969" class="student-link">github</a>
+                </li>
+              </ul>
             </div>
             <div class="footer__item">
-              <a href="#" class="rss-link">Rolling Scopes School</a>
+              <a href="https://rs.school/js-stage0/" class="rss-link">Rolling Scopes School</a>
             </div>
             <div class="footer__item">
-              <div class="footer__contacts">
-                <div class="footer__contacts">
-                  <a href="#" class="footer__link"></a>
-                </div>
-                <div class="footer__contacts">
-                  <a href="#" class="footer__link"></a>
-                </div>
-                <div class="footer__contacts">
-                  <a href="#" class="footer__link"></a>
-                </div>
-                <div class="footer__contacts">
-                  <a href="#" class="footer__link"></a>
-                </div>
-              </div>
+              <ul class="footer__contacts">
+                <li class="footer__contact insta-icon">
+                  <a href="#!" class="footer__link"></a>
+                </li>
+                <li class="footer__contact facebook-icon">
+                  <a href="#!" class="footer__link"></a>
+                </li>
+                <li class="footer__contact twitter-icon">
+                  <a href="#!" class="footer__link"></a>
+                </li>
+                <li class="footer__contact pinterest-icon">
+                  <a href="#!" class="footer__link"></a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
