feat: add burger

--- a/plants/index.html
+++ b/plants/index.html
@@ -38,6 +38,10 @@
                 </li>
               </ul>
             </nav>
+            <div class="header-burger">
+              <span class="burger-line burger-line_first"></span>
+              <span class="burger-line burger-line_second"></span>
+            </div>
           </div>
         </div>
       </header>
