feat: add burger menu

--- a/plants/index.html
+++ b/plants/index.html
@@ -37,8 +37,12 @@
                   <a href="#contacts-section" class="nav-link">Contacts</a>
                 </li>
               </ul>
+              <div class="header__nav-close">
+                <span class="header_nav-close-line"></span>
+                <span class="header_nav-close-line"></span>
+              </div>
             </nav>
-            <div class="header-burger">
+            <div class="header-burger burger">
               <span class="burger-line burger-line_first"></span>
               <span class="burger-line burger-line_second"></span>
             </div>
@@ -250,6 +254,10 @@
                 srcset="../plants/assets/images/woman_tablet.png"
                 media="(max-width: 1200px)"
                 >
+                <source
+                srcset="../plants/assets/images/woman_mobile.png"
+                media="(max-width: 765px)"
+                >
                 <img src="../plants/assets/images/woman.png" alt="woman" class="contacts__image">
               </picture>
             </div>
@@ -315,4 +323,5 @@
       </div>
     </footer>
   </body>
+  <script src="src/js/index.js"></script>
 </html>
